# Demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  config.toml  main.cpp
aizix/: CMakeLists.txt  config.toml
aizix/include/aizix/: App.hpp  version.hpp
aizix/include/aizix/controller/: HttpController.hpp
aizix/include/aizix/core/: HttpSession.hpp  HttpsSession.hpp  Server.hpp  h2_session.hpp
aizix/include/aizix/core/client/: HttpClientPool.hpp  h2_connection.hpp  http_client.hpp  http_connection.hpp  https_connection.hpp  iconnection.hpp  ihttp_client.hpp  iwebsocket_client_handler.hpp  websocket_client.hpp  websocket_connection.hpp
aizix/include/aizix/error/: aizix_error.hpp
aizix/include/aizix/http/: http_common_types.hpp  network_constants.hpp  parameter_set.hpp  request_context.hpp  route_compiler.hpp  router.hpp
aizix/include/aizix/lib/: ada.h
aizix/include/aizix/utils/: cert_checker.hpp  compression_manager.hpp  compressor.hpp  decompressor.hpp  finally.hpp  logger_manager.hpp  param_parser.hpp  pocess_info.hpp  thread_utils.hpp  time_util.hpp
aizix/include/aizix/utils/config/: AizixConfig.hpp  ConfigLoader.hpp
aizix/src/: App.cpp
aizix/src/core/: HttpSession.cpp  HttpsSession.cpp  Server.cpp  h2_session.cpp
aizix/src/core/client/: HttpClientPool.cpp  h2_connection.cpp  http_client.cpp  http_connection.cpp  https_connection.cpp  websocket_client.cpp  websocket_connection.cpp
aizix/src/http/: request_context.cpp  router.cpp
aizix/src/lib/: ada.cpp
aizix/src/utils/: compression_manager.cpp  compressor.cpp  decompressor.cpp
aizix/src/utils/config/: ConfigLoader.cpp
dev-cert/: server.csr
dev-cert/dev-ca/private/: ca.key.pem
src/: Application.cpp  Application.hpp  config.toml  main.cpp  version.hpp
src/controller/: controller.hpp  user_controller.cpp  user_controller.hpp
src/core/: Server.cpp  Server.hpp  h2_session.cpp  h2_session.hpp  h2c_session.cpp  h2c_session.hpp  server.hpp  ssl_context_manager.hpp
src/core/client/: IWebSocketClientHandler.hpp  UserStatusHandler.hpp  WebSocketClient.cpp  WebSocketClient.hpp  WebSocketConnection.cpp  WebSocketConnection.hpp  connection_helpers.hpp  connection_manager.cpp  connection_manager.hpp  h2_connection.cpp  h2_connection.hpp  h2_connection_base.hpp  h2c_connection.cpp  h2c_connection.hpp  http1_connection.cpp  http1_connection.hpp  http_client.cpp  http_client.hpp  http_connection.cpp  http_connection.hpp  http_ssl_connection.cpp  http_ssl_connection.hpp  https_connection.cpp  https_connection.hpp  iconnection.hpp  ihttp_client.hpp  iwebsocket_client_handler.hpp  user_status_handler.hpp  websocket_client.cpp  websocket_client.hpp  websocket_connection.cpp  websocket_connection.hpp
src/dev-cert/: server-ext.cnf  server.key
src/dev-cert/dev-ca/: index.txt  openssl.cnf
src/dev-cert/dev-ca/certs/: ca.cert.pem
src/error/: aizix_error.hpp  my_error.hpp
src/http/: handler.hpp  http_common_types.hpp  network_constants.hpp  parameter_set.hpp  request_context.cpp  request_context.hpp  route_compiler.hpp  router.cpp  router.hpp  string_view_body.hpp
src/impl/: user_service.cpp  user_service.hpp
src/utils/: cert_checker.hpp  compression_manager.cpp  compression_manager.hpp  compressor.cpp  compressor.hpp  connection_context.hpp  decompression_manager.cpp  decompression_manager.hpp  decompressor.cpp  decompressor.hpp  finally.hpp  logger_manager.hpp  param_parser.hpp  pocess_info.hpp  spdlog_config.hpp  thread_utils.hpp  time_util.hpp  utils.hpp
src/utils/config/: AizixConfig.hpp  ConfigLoader.cpp  ConfigLoader.hpp  config.hpp  config_loader.cpp  config_loader.hpp
xingju/: CMakeLists.txt  README.md  config.toml
xingju/dev-cert/: generate-dev-cert.sh  server.cnf
xingju/dev-cert/dev-ca/newcerts/: 1000.pem
xingju/src/: ServiceInstanceManager.cpp  ServiceInstanceManager.hpp  main.cpp
xingju/src/controller/: XingjuController.cpp  XingjuController.hpp  user_controller.cpp  user_controller.hpp  user_service.cpp  user_service.hpp  user_status_handler.hpp
xingju/src/error/: xingju_error.hpp
xingju/src/response/: Instance.hpp  ResponseResult.hpp  ResponseState.hpp
